--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 }
 
 :root {
-    --page-blue: #429AFF;
-    --page-white: #F9F9F9
+    --page-blue: #0876DB;
+    --page-white: #F9F9F9;
+    --page-grey: #A5A5A5;
 }
 
 .nav-bar {
@@ -28,6 +29,7 @@
     align-items: center;
     text-align: center;
     justify-content: center;
+    border-left: 1px solid var(--page-white);
 }
 
 .nav-button:hover {
@@ -40,4 +42,81 @@
     justify-content: right;
     position: absolute;
     left: 2vw;
+}
+
+.hero {
+    height: 80vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 5vw 0 5vw ;
+    background: linear-gradient(90deg, var(--page-grey), var(--page-white));
+}
+
+.info {
+    display: inline-block;
+    height: 50%;
+    width: 100%;
+    max-width: 800px;
+    color: var(--page-blue);
+}
+
+.intro {
+    font-size: 3rem;
+}
+
+.name {
+    margin-top: -10px;
+    font-size: 4rem;
+    font-weight: bold;
+    margin-left: 2vw;
+}
+
+hr {
+    margin: 2vh 0 2vh 0;
+    border: 2px solid black;
+    width: 80%;
+    max-width: 600px;
+}
+
+.about p {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.about ul {
+    font-size: 1.75rem;
+    list-style: none;
+    font-weight: bold;
+    margin-left: 2vw;
+}
+.picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 400px;
+    width: 400px;
+    border: 3px solid black;
+    background-color: var(--page-blue);
+    border-radius: 50%;
+}
+.picture img {
+
+    height: 95%;
+    width: 95%;
+    border-radius: 50%;
+}
+
+.contact {
+    border: 3px solid black;
+    margin: 0 20px 0 auto;
+    width: 300px;
+    height: 75px;
+    background-color: var(--page-blue);
+    color: var(--page-white);
+    font-size: 2rem;
+    font-weight: bold;
+    border-radius: 37px;
 }
