--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,6 @@ a {
     background-color: var(--page-white);
     width: 100vw;
     padding: 10px 10px 40px 10px;
-    border: 2px solid red;
 }
 
 .programming-projects {
@@ -256,4 +255,9 @@ a {
 
 .project p {
     margin-top: 1vh;
+}
+
+.project:hover {
+    background-color: rgba(0, 0, 0, .2);
+    cursor: pointer;
 }
