--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ a {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 5vw 0 5vw ;
-    background-image: url("./Background.jpg");
+    background-image: url("Main_Page_Assets/Background.jpg");
     background-size: cover;
 }
 
@@ -281,7 +281,7 @@ a {
 .experience {
     display: flex;
     width: 100%;
-    background-image: url("./Background.jpg");
+    background-image: url("Main_Page_Assets/Background.jpg");
     background-size: cover;
     padding: 6vh 0 6vh 0;
     color: var(--page-white);
