--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,17 @@ a {
     margin-top: 1vh;
 }
 
-.project:hover {
+.learn-more:hover {
     background-color: rgba(0, 0, 0, .2);
     cursor: pointer;
+}
+
+.learn-more {
+    width: 300px;
+    height: 50px;
+    background-color: var(--page-blue);
+    border-radius: 50px;
+    margin: 2vh auto 2vh auto;
 }
 
 .experience {
