Added a Source Code button to password manager page

--- a/Password_Manager_Project/Password_Manager_styles.css
+++ b/Password_Manager_Project/Password_Manager_styles.css
@@ -78,6 +78,20 @@ h1 {
     margin-bottom: 5vh;
 }
 
+.source-link {
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #0876DB;
+    margin: 0 auto 0 auto;
+    color: #F9F9F9;
+}
+
+.body a {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 section.body {
     width: 70vw;
     margin: 5vh auto 5vh auto;
@@ -96,4 +110,10 @@ h2 {
 p {
     font-size: 1.5rem;
     letter-spacing: 1px;
+}
+
+footer {
+    height: 50px;
+    width: 100%;
+    background-color: #0876DB;
 }
